# EventDispatch

./: .gitignore  .gitlab-ci.yml  404.html  ReadMe.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.docs/templates/: dispatcher.md  event_router.md  handler_registry.md  index.md
.docs/templates/EventSources/: event_source_overview.md  kafka_source.md
.githooks/: pre-commit.run_python_black
EventSources/event_source_overview/: index.html
EventSources/kafka_source/: index.html
dispatcher/: index.html
event_stream_processor/: __init__.py  exceptions.py
event_stream_processor/common/: models.py
event_stream_processor/domain/entities/: dispatch.py  dispatcher.py  event_registry.py  event_router.py  handler_registry.py  runner.py
event_stream_processor/domain/interfaces/: event_source.py
event_stream_processor/infrastructure/: __init__.py  kafka_event_source.py
handler_registry/: index.html
search/: search_index.json
tests/: conftest.py  test__fixtures.py  test__support_factories.py
tests/support_factories/: event_factory.py
tests/test__domain/test__entities/: test__dispatch.py  test__dispatcher.py  test__event_registry.py  test__event_router.py  test__handler_registry.py  test__runner.py
tests/test__infrastructure/: test__kafka_queue.py
tests/test_domain/: test__event_registry.py
