[tool.poetry]
name = "event-stream-processor"
version = "0.1.0"
description = "Register functions to be passed events from a queue"
authors = ["etiology"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
py-buzz = "^2.1.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^20.8b1"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.4"
mkdocstrings = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
